<resources>
    <string name="app_name">FranckPizzasfinal</string>
    <string name="orders">orders\n</string>
    <string name="pizza_image">pizza_image\n</string>
    <string name="menu">menu</string>
    <string name="home">home</string>
    <string name="cart">cart</string>
    <string name="pizzaiolo">pizzaiolo</string>
    <string name="recipes">recipes</string>
    <string name="stocks">stocks</string>
    <string name="dashboard">dashboard</string>
    <string name="pizza_description">pizza_description</string>
    <string name="pizza_name">pizza_name</string>
    <string name="preparation_time_icon">preparation_time_icon\n</string>
    <string name="preparation_time_placeholder">preparation_time_placeholder</string>
    <string name="pizza_price">pizza_price\n</string>
    <string name="add_to_cart">add_to_cart\n</string>
    <string name="price">6000fcfa\n</string>
    <string name="open_menu">Ouvrir le menu</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="Franckpizza2025">© Franckpizza 2025 ken</string>
    <string name="Franckpizza">© Franckpizza </string>
    <string name="total_40_000_fcfa">Total : 40 000 FCFA</string>
    <string name="passer_au_paiement">Passer au paiement</string>
    <string name="company_name">company_name</string>
    <string name="commencer">commencer\n</string>
    <string name="app_logo_description">bienvenue chez FranckPizza</string>
    <string name="inscription">Inscription</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="vous_avez_d_j_un_compte_connectez_vous">Vous avez déjà un compte ? Connectez-vous</string>
    <string name="nom_complet">Nom complet</string>
    <string name="email">Email</string>


    <string name="account_title">Mon Compte</string>
    <string name="user_avatar">Avatar de l\'utilisateur</string>
    <string name="email_icon">Icône email</string>
    <string name="phone_icon">Icône téléphone</string>
    <string name="address_icon">Icône adresse</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="kenne_cedric">kenne cedric</string>
    <string name="jean_dupont_example_com">cedric.kenne@gmail.com</string>
    <string name="_123_rue_exemple_paris">cameroun, bangangte</string>
    <string name="_656752485">0123456789</string>
    <string name="deconnexion">Deconnexion\n</string>
    <string name="connexion">Connexion</string>
    <string name="email1">Email</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="accueil">Accueil</string>
    <string name="commandes">Commandes</string>
    <string name="panier">Panier</string>
    <string name="compte">Compte</string>
    <string name="frankpizza">FrankPizza</string>
    <string name="nos_pizzas">Nos Pizzas</string>
    <string name="pizza_margherita">Pizza Margherita</string>
    <string name="margherita">Margherita</string>
    <string name="commander">Commander</string>
    <string name="pizza_pepperoni">Pizza Pepperoni</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="pizza_v_g_tarienne">Pizza Végétarienne</string>
    <string name="v_g_tarienne">Végétarienne</string>
    <string name="pizza_quatre_fromages">Pizza Quatre Fromages</string>
    <string name="_4_fromages">4 Fromages</string>
    <string name="pizza_hawa_enne">Pizza Hawaïenne</string>
    <string name="hawa_enne">Hawaïenne</string>
    <string name="pizza_bbq">Pizza BBQ</string>
    <string name="pizzas_gourmandes">Pizzas Gourmandes</string>
    <string name="pizza_mexicaine">Pizza Mexicaine</string>
    <string name="mexicaine">Mexicaine</string>
    <string name="reine">reine</string>
    <string name="pizza_reine">Pizza Reine</string>
    <string name="quantit_2">Quantité: 2</string>
    <string name="_5_000_fcfa">5 000 FCFA</string>
    <string name="supprimer_l_article">Supprimer l\'article</string>
    <string name="pizza_4_fromages">Pizza 4 Fromages</string>
    <string name="commande_1">Commande 1</string>
    <string name="_25_janv_2025_14_30">25 Janv. 2025 - 14:30</string>
    <string name="en_cours">En cours</string>
    <string name="image_de_la_pizza">Image de la pizza</string>
    <string name="mozzarella_jambon_champignons">Mozzarella, jambon, champignons</string>
    <string name="_5000_fcfa">5000 FCFA</string>
    <string name="ajouter">Ajouter</string>


</resources>