<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"


        android:padding="16dp">

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_reine"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtItemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtItemName"
            android:layout_marginTop="8dp"
            android:text="@string/quantit_2"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txtItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/txtItemName"
            android:text="@string/_5_000_fcfa"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark" />

        <ImageButton
            android:id="@+id/btnRemoveItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/txtItemPrice"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/supprimer_l_article" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
