<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">



    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="376dp"
        android:layout_height="313dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/piz_log1"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/logo_description"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/app_logo_description"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:text="@string/commencer"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />


    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Franckpizza2025"
        android:textColor="@android:color/holo_purple"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_button" />

</androidx.constraintlayout.widget.ConstraintLayout>


    <!-- nom: KENNE TANGO CEDRIC FRANCK-->
    <!-- matricule: 22C038 -->
    <!-- filiere: GL3 -->